# OpenPCB

./: .gitignore  .gitmessage  .pre-commit-config.yaml  README.md  pyproject.toml  run.sh  setup.sh  test.sh
docs/: 01-Background.md  02-Requirements.md  03-Method.md  04-Implementation.md  05-Milestones.md  06-GatheringResults.md  07-RiskRegister.md  08-Compliance.md  09-Deployment.md  10-SerialUSB.md  11-PostProcessors.md  A1-AutoLeveling.md  A2-Laser.md  A3-MouseBites.md  A4-VGrooveRailsFids.md  ARCHITECTURE-CONFIG.md  B1-CLI.md  BACKLOG.md  HIDPI-ISSUES.md  INDEX.md  PHASE-ARCHITECTURE-TEMPLATE.md  PHASE-TEMPLATE.md  PHASE1-ARCHITECTURE-CONFIG.md  PHASE1-PROGRESS.md  PROGRESS.md  README.md  SPEC-1-OpenPCB.md  THIRD_PARTY_NOTICES.md
openpcb/: __main__.py  cli.py
openpcb/cam/: autolevel.py  isolation.py
openpcb/config/: __init__.py  defaults.py  manager.py  models.py
openpcb/models/: project.py
openpcb/post/: grbl.py  mach3.py
openpcb/ui/: __init__.py  hidpi.py  mainwindow.py
openpcb/ui/preferences/: __init__.py  base.py  display_page.py  hidpi_page.py  workspace_page.py
tests/: heightmap_demo.json  project_min.json  test_config.py
